# comfyui-et_dynamicprompts

./: README.md  __init__.py  node.py  pyproject.toml
nodes/: dynamic_prompt.py
